# flight-price-tracker

./: .gitignore  README.md  gui.py  main.py  pyproject.toml  requirements.txt
flight_tracker/: aggregator.py  formatter.py  models.py  scraper.py
flight_tracker/providers/: __init__.py  base.py  fli_provider.py  google.py  tripcom.py
