[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-price-tracker"
version = "1.0.0"
description = "김포↔제주 최저가 항공권 검색기 (Google Flights)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fast-flights>=2.2",
    "rich>=13.0",
    "requests>=2.28",
]

[tool.setuptools]
packages = ["flight_tracker"]
py-modules = ["main"]

[project.scripts]
flights = "main:main"
